# timediff

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  timediff.rs
src/locale/: common.rs  de_de.rs  en_us.rs  mod.rs  ru_ru.rs  tr_tr.rs  zh_cn.rs
