[package]
name = "timediff"
description = "Day.js-inspired relative time for Rust with locale-aware UI copy."
license = "MIT"
keywords = ["relative-time", "dayjs", "duration", "locale", "humanize"]
homepage = "https://github.com/lryong/timediff"
repository = "https://github.com/lryong/timediff"
documentation = "https://docs.rs/timediff"
readme = "README.md"
authors = ["Herbert Lu <15816537946@163.com>"]
version = "0.2.3"
edition = "2021"
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "timediff"
path = "src/lib.rs"

[dependencies]
humantime = "2.1.0"
